This file lists changes on this extension.
Localisation updates are done on betawiki and aren't listed here.

0.11.6 - 7 January 2009
  * Added support for OpenID extension.
  * Updated GoogleAdSense extension.

0.11.5 - 31 December 2008
  Fixed Special:Extensions: some settings using radio buttons had no radio
  button pre-selected, resulting in an error when saving settings.

0.11.4 - 30 December 2008
  Updated FlaggedRevs extension.

0.11.3 - 22 December 2008
  * Missing rights while executing API module now result in warnings rather than
    errors.
  * Fixed type of $wgRedirectSources

0.11.2 - 18 December 2008
  Added support for APCOND_ISIP and APCOND_IPINRANGE conditions of
  $wgAutopromote.

0.11.1 - 13 December 2008
  Added $wgEnableSerializedMessages.

0.11.0 - 11 December 2008
  * efConfigureSetup() now delayed until cache objects are set with database
    handler to avoid some issues with maintenance scripts.
  * Removed $wgNullFile
  * Added support for $wgAutopromote
  THIS VERSION NOW REQUIRES MediaWiki 1.14 TO WORK.


0.10.18 - 10 December 2008
  * Added $wgExtraNamespaces, $wgLocaltimezone and
    $wgExemptFromUserRobotsControl to the default list of editable settings.
  * Success message now displayed through a post-save redirect, instead of
    showing it on the POST-ed page.

0.10.17 - 9 December 2008
  If $wgConfigureWikis is an array, a selector-box is displayed instead of a
  text box with a list of allowed values.

0.10.16 - 7 December 2008
  $wgLogo doesn't need anymore configure-all right to be modified.

0.10.15 - 5 December 2008
  * Fixed PHP notices on Special:ViewConfig.
  * Added $wgNullFile

0.10.14 - 4 December 2008
  * Added support for $wgRateLimits
  * Don't show [+] for sections in TOC with only one subsection

0.10.13 - 3 December 2008
  * JavaScript-based setting search in Special:Configure, Special:Extensions
    and Special:ViewConfig
  * Hidden settings now have a summary