@@ -4,6 +4,7 @@ Localisation updates are done on betawiki and aren't listed here.
 0.11.6 - 7 January 2009
   * Added support for OpenID extension.
   * Updated GoogleAdSense extension.
+  * Added support for NewUserMessage extension.
 
 0.11.5 - 31 December 2008
   Fixed Special:Extensions: some settings using radio buttons had no radio
